--- a/app/views/items/_amazon_items.html.erb
+++ b/app/views/items/_amazon_items.html.erb
@@ -4,13 +4,16 @@
       <div class="item-box">
         <div class="image">
           <div class="img-wrap">
-            <% #TODO 商品画像 %>
+            <% if item.get('LargeImage').present? %>
+            <img src="<%= item.get('LargeImage/URL') %>" />
+            <% elsif %>
             <%= image_tag("no-image.png" , alt: item.get('ItemAttributes/Title')) %>
+            <% end %>
           </div>
         </div>
         <div class="detail">
           <p class="title">
-            <% #TODO 商品タイトル %>
+            <%= item.get('ItemAttributes/Title') %>
             仮タイトル
           </p>
         </div>
