--- a/app/views/items/_amazon_items.html.erb
+++ b/app/views/items/_amazon_items.html.erb
@@ -10,7 +10,7 @@
 
 
             <% if item.get('LargeImage').present? %>
-            <img src="<%= item.get('LargeImage/URL') %>" alt=“<%= item.get(‘ItemAttributes/Title’) %>” />
+            <img src="<%= item.get('LargeImage/URL') %>" alt="<%= item.get('ItemAttributes/Title') %>" />
             <% elsif %>
             <%= image_tag("no-image.png" , alt: item.get('ItemAttributes/Title')) %>
             <% end %>
