--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,13 +3,15 @@
     <div class="item-single-main">
       <div class="image">
         <div class="img-wrap">
-          <% #TODO 商品イメージ %>
+          <% if @item.large_image.present? %>
+          <img src="<%= @item.large_image %>" alt="<%= @item.title %>">
+          <% elsif %>
           <%= image_tag("no-image.png" , alt: @item.title) %>
+          <% end %>
         </div>
       </div>
       <div class="title">
-        <% #TODO 商品タイトル %>
-        仮タイトル
+        <%= @item.title %>
       </div>
       <%= render 'action' , item: @item %>
     </div>
@@ -18,18 +20,25 @@
         <h4 class="side-box-title">Haveしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Haveしたユーザー一覧 %>
-
+          <% @item.have_users.each do |have_user| %>
+          <%= link_to gravatar_for(have_user, size:20),have_user %>
+          <% end %>
         </div>
       </div>
       <div class="side-box">
         <h4 class="side-box-title">Wantしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Wantしたユーザー一覧 %>
+          <% @item.want_users.each do |want_user| %>
+          <%= link_to gravatar_for(want_user, size:20),want_user %>
+          <% end %>
         </div>
       </div>
       <div class="text-center">
         <% #TODO 正しいリンク先に %>
-        <%= link_to(image_tag("amazon-button.png", {alt: "Amazon詳細ページへ"}), '#') %>
+        <a href=" <%= @item.detail_page_url %> ">
+          <%= image_tag("amazon-button.png", {alt: "Amazon詳細ページへ"})  %>
+        </a>
       </div>
     </div>
   </div>
